COMP2122/l22_entrega2/l22/l22_parser.output
Terminals unused in grammar

    tPRIVATE
    '@'


State 0 conflicts: 2 reduce/reduce
State 12 conflicts: 1 shift/reduce
State 26 conflicts: 1 shift/reduce
State 36 conflicts: 1 shift/reduce
State 95 conflicts: 14 shift/reduce
State 97 conflicts: 1 shift/reduce
State 98 conflicts: 1 shift/reduce
State 143 conflicts: 1 shift/reduce
State 144 conflicts: 1 shift/reduce
State 145 conflicts: 1 shift/reduce
State 146 conflicts: 1 shift/reduce
State 147 conflicts: 1 shift/reduce
State 148 conflicts: 1 shift/reduce
State 149 conflicts: 1 shift/reduce
State 150 conflicts: 1 shift/reduce
State 151 conflicts: 1 shift/reduce
State 152 conflicts: 1 shift/reduce
State 153 conflicts: 1 shift/reduce
State 154 conflicts: 1 shift/reduce
State 155 conflicts: 1 shift/reduce
State 158 conflicts: 1 shift/reduce


Grammar

    0 $accept: file $end

    1 file: %empty
    2     | opt_variable_decls
    3     | file program

    4 program: tBEGIN block tEND

    5 block: '{' opt_variable_decls opt_instructions '}'

    6 var_type: tVAR

    7 variable_decl: qualifier data_type tIDENTIFIER
    8              | data_type tIDENTIFIER
    9              | qualifier data_type tIDENTIFIER '=' expression
   10              | data_type tIDENTIFIER '=' expression
   11              | tFOREIGN var_type tIDENTIFIER '=' expression
   12              | tPUBLIC var_type tIDENTIFIER '=' expression
   13              | var_type tIDENTIFIER '=' expression
   14              | qualifier tIDENTIFIER '=' expression

   15 variable_decl_block: qualifier data_type tIDENTIFIER '=' block_expression
   16                    | data_type tIDENTIFIER '=' block_expression
   17                    | tFOREIGN var_type tIDENTIFIER '=' block_expression
   18                    | tPUBLIC var_type tIDENTIFIER '=' block_expression
   19                    | var_type tIDENTIFIER '=' block_expression
   20                    | qualifier tIDENTIFIER '=' block_expression

   21 variable_decls: variable_decl ';'
   22               | variable_decl ';' variable_decls
   23               | variable_decl_block
   24               | variable_decl_block variable_decls

   25 opt_variable_decls: %empty
   26                   | variable_decls

   27 qualifier: tFOREIGN
   28          | tUSE
   29          | tPUBLIC

   30 data_type: tINT_TYPE
   31          | tREAL_TYPE
   32          | tSTRING_TYPE
   33          | '[' data_type ']'
   34          | '[' tVOID_TYPE ']'
   35          | func_type

   36 data_types: data_type
   37           | data_types ',' data_type

   38 arg: data_type tIDENTIFIER

   39 args: arg
   40     | args ',' arg

   41 func_def: '(' ')' '-' '>' data_type ':' block
   42         | '(' args ')' '-' '>' data_type ':' block
   43         | '(' ')' '-' '>' tVOID_TYPE ':' block
   44         | '(' args ')' '-' '>' tVOID_TYPE ':' block

   45 func_type: data_type '<' data_types '>'
   46          | data_type '<' '>'

   47 opt_instructions: %empty
   48                 | instructions

   49 instructions: instruction
   50             | block_instruction
   51             | instruction ';' instructions
   52             | block_instruction instructions

   53 instruction: expression
   54            | tWRITE expressions
   55            | tWRITELN expressions
   56            | tAGAIN
   57            | tSTOP
   58            | tRETURN expression
   59            | tRETURN
   60            | block

   61 block_instruction: tIF expression tTHEN block
   62                  | tIF expression tTHEN block if_false
   63                  | tWHILE '(' expression ')' tDO block
   64                  | block_expression

   65 if_false: tELSE block
   66         | tELIF expression tTHEN block
   67         | tELIF expression tTHEN block if_false

   68 block_expression: func_def

   69 expression: integer
   70           | real
   71           | string
   72           | tNULL
   73           | lvalue
   74           | lvalue '=' expression
   75           | expression '+' expression
   76           | expression '-' expression
   77           | expression '*' expression
   78           | expression '/' expression
   79           | expression '%' expression
   80           | expression '<' expression
   81           | expression tLE expression
   82           | expression tEQ expression
   83           | expression tGE expression
   84           | expression '>' expression
   85           | expression tNE expression
   86           | expression tAND expression
   87           | expression tOR expression
   88           | '-' expression
   89           | '+' expression
   90           | tNOT expression
   91           | tINPUT
   92           | expression '(' opt_expressions ')'
   93           | tSIZEOF '(' expression ')'
   94           | '(' expression ')'
   95           | '[' expression ']'
   96           | lvalue '?'

   97 lvalue: tIDENTIFIER
   98       | lvalue '[' expression ']'
   99       | '(' expression ')' '[' expression ']'
  100       | expression '(' opt_expressions ')' '[' expression ']'

  101 expressions: expression
  102            | expressions ',' expression

  103 opt_expressions: %empty
  104                | expressions

  105 integer: tINTEGER

  106 real: tREAL

  107 string: tSTRING
  108       | string tSTRING


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 79
    '(' (40) 41 42 43 44 63 92 93 94 99 100
    ')' (41) 41 42 43 44 63 92 93 94 99 100
    '*' (42) 77
    '+' (43) 75 89
    ',' (44) 37 40 102
    '-' (45) 41 42 43 44 76 88
    '/' (47) 78
    ':' (58) 41 42 43 44
    ';' (59) 21 22 51
    '<' (60) 45 46 80
    '=' (61) 9 10 11 12 13 14 15 16 17 18 19 20 74
    '>' (62) 41 42 43 44 45 46 84
    '?' (63) 96
    '@' (64)
    '[' (91) 33 34 95 98 99 100
    ']' (93) 33 34 95 98 99 100
    '{' (123) 5
    '}' (125) 5
    error (256)
    tINTEGER <i> (258) 105
    tREAL <d> (259) 106
    tIDENTIFIER <s> (260) 7 8 9 10 11 12 13 14 15 16 17 18 19 20 38 97
    tSTRING <s> (261) 107 108
    tINT_TYPE (262) 30
    tREAL_TYPE (263) 31
    tSTRING_TYPE (264) 32
    tVOID_TYPE (265) 34 43 44
    tFOREIGN (266) 11 17 27
    tUSE (267) 28
    tPUBLIC (268) 12 18 29
    tVAR (269) 6
    tPRIVATE (270)
    tAND (271) 86
    tOR (272) 87
    tNOT (273) 90
    tIF (274) 61 62
    tTHEN (275) 61 62 66 67
    tELIF (276) 66 67
    tELSE (277) 65
    tWHILE (278) 63
    tDO (279) 63
    tSTOP (280) 57
    tAGAIN (281) 56
    tWRITE (282) 54
    tWRITELN (283) 55
    tRETURN (284) 58 59
    tINPUT (285) 91
    tNULL (286) 72
    tBEGIN (287) 4
    tEND (288) 4
    tSIZEOF (289) 93
    tGE (290) 83
    tLE (291) 81
    tEQ (292) 82
    tNE (293) 85
    tUNARY (294)


Nonterminals, with rules where they appear

    $accept (59)
        on left: 0
    file <sequence> (60)
        on left: 1 2 3
        on right: 0 3
    program <node> (61)
        on left: 4
        on right: 3
    block <block> (62)
        on left: 5
        on right: 4 41 42 43 44 60 61 62 63 65 66 67
    var_type <type> (63)
        on left: 6
        on right: 11 12 13 17 18 19
    variable_decl <node> (64)
        on left: 7 8 9 10 11 12 13 14
        on right: 21 22
    variable_decl_block <node> (65)
        on left: 15 16 17 18 19 20
        on right: 23 24
    variable_decls <sequence> (66)
        on left: 21 22 23 24
        on right: 22 24 26
    opt_variable_decls <sequence> (67)
        on left: 25 26
        on right: 2 5
    qualifier <i> (68)
        on left: 27 28 29
        on right: 7 9 14 15 20
    data_type <type> (69)
        on left: 30 31 32 33 34 35
        on right: 7 8 9 10 15 16 33 36 37 38 41 42 45 46
    data_types <vector> (70)
        on left: 36 37
        on right: 37 45
    arg <node> (71)
        on left: 38
        on right: 39 40
    args <sequence> (72)
        on left: 39 40
        on right: 40 42 44
    func_def <expression> (73)
        on left: 41 42 43 44
        on right: 68
    func_type <type> (74)
        on left: 45 46
        on right: 35
    opt_instructions <sequence> (75)
        on left: 47 48
        on right: 5
    instructions <sequence> (76)
        on left: 49 50 51 52
        on right: 48 51 52
    instruction <node> (77)
        on left: 53 54 55 56 57 58 59 60
        on right: 49 51
    block_instruction <node> (78)
        on left: 61 62 63 64
        on right: 50 52
    if_false <node> (79)
        on left: 65 66 67
        on right: 62 67
    block_expression <expression> (80)
        on left: 68
        on right: 15 16 17 18 19 20 64
    expression <expression> (81)
        on left: 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96
        on right: 9 10 11 12 13 14 53 58 61 62 63 66 67 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 92 93 94 95 98 99 100 101 102
    lvalue <lvalue> (82)
        on left: 97 98 99 100
        on right: 73 74 96 98
    expressions <sequence> (83)
        on left: 101 102
        on right: 54 55 102 104
    opt_expressions <sequence> (84)
        on left: 103 104
        on right: 92 100
    integer <expression> (85)
        on left: 105
        on right: 69
    real <expression> (86)
        on left: 106
        on right: 70
    string <s> (87)
        on left: 107 108
        on right: 71 108


State 0

    0 $accept: . file $end

    tINT_TYPE     shift, and go to state 1
    tREAL_TYPE    shift, and go to state 2
    tSTRING_TYPE  shift, and go to state 3
    tFOREIGN      shift, and go to state 4
    tUSE          shift, and go to state 5
    tPUBLIC       shift, and go to state 6
    tVAR          shift, and go to state 7
    '['           shift, and go to state 8

    $end      reduce using rule 1 (file)
    $end      [reduce using rule 25 (opt_variable_decls)]
    tBEGIN    reduce using rule 1 (file)
    tBEGIN    [reduce using rule 25 (opt_variable_decls)]
    $default  reduce using rule 1 (file)

    file                 go to state 9
    var_type             go to state 10
    variable_decl        go to state 11
    variable_decl_block  go to state 12
    variable_decls       go to state 13
    opt_variable_decls   go to state 14
    qualifier            go to state 15
    data_type            go to state 16
    func_type            go to state 17


State 1

   30 data_type: tINT_TYPE .

    $default  reduce using rule 30 (data_type)


State 2

   31 data_type: tREAL_TYPE .

    $default  reduce using rule 31 (data_type)


State 3

   32 data_type: tSTRING_TYPE .

    $default  reduce using rule 32 (data_type)


State 4

   11 variable_decl: tFOREIGN . var_type tIDENTIFIER '=' expression
   17 variable_decl_block: tFOREIGN . var_type tIDENTIFIER '=' block_expression
   27 qualifier: tFOREIGN .

    tVAR  shift, and go to state 7

    $default  reduce using rule 27 (qualifier)

    var_type  go to state 18


State 5

   28 qualifier: tUSE .

    $default  reduce using rule 28 (qualifier)


State 6

   12 variable_decl: tPUBLIC . var_type tIDENTIFIER '=' expression
   18 variable_decl_block: tPUBLIC . var_type tIDENTIFIER '=' block_expression
   29 qualifier: tPUBLIC .

    tVAR  shift, and go to state 7

    $default  reduce using rule 29 (qualifier)

    var_type  go to state 19


State 7

    6 var_type: tVAR .

    $default  reduce using rule 6 (var_type)


State 8

   33 data_type: '[' . data_type ']'
   34          | '[' . tVOID_TYPE ']'

    tINT_TYPE     shift, and go to state 1
    tREAL_TYPE    shift, and go to state 2
    tSTRING_TYPE  shift, and go to state 3
    tVOID_TYPE    shift, and go to state 20
    '['           shift, and go to state 8

    data_type  go to state 21
    func_type  go to state 17


State 9

    0 $accept: file . $end
    3 file: file . program

    $end    shift, and go to state 22
    tBEGIN  shift, and go to state 23

    program  go to state 24


State 10

   13 variable_decl: var_type . tIDENTIFIER '=' expression
   19 variable_decl_block: var_type . tIDENTIFIER '=' block_expression

    tIDENTIFIER  shift, and go to state 25


State 11

   21 variable_decls: variable_decl . ';'
   22               | variable_decl . ';' variable_decls

    ';'  shift, and go to state 26


State 12

   23 variable_decls: variable_decl_block .
   24               | variable_decl_block . variable_decls

    tINT_TYPE     shift, and go to state 1
    tREAL_TYPE    shift, and go to state 2
    tSTRING_TYPE  shift, and go to state 3
    tFOREIGN      shift, and go to state 4
    tUSE          shift, and go to state 5
    tPUBLIC       shift, and go to state 6
    tVAR          shift, and go to state 7
    '['           shift, and go to state 8

    '['       [reduce using rule 23 (variable_decls)]
    $default  reduce using rule 23 (variable_decls)

    var_type             go to state 10
    variable_decl        go to state 11
    variable_decl_block  go to state 12
    variable_decls       go to state 27
    qualifier            go to state 15
    data_type            go to state 16
    func_type            go to state 17


State 13

   26 opt_variable_decls: variable_decls .

    $default  reduce using rule 26 (opt_variable_decls)


State 14

    2 file: opt_variable_decls .

    $default  reduce using rule 2 (file)


State 15

    7 variable_decl: qualifier . data_type tIDENTIFIER
    9              | qualifier . data_type tIDENTIFIER '=' expression
   14              | qualifier . tIDENTIFIER '=' expression
   15 variable_decl_block: qualifier . data_type tIDENTIFIER '=' block_expression
   20                    | qualifier . tIDENTIFIER '=' block_expression

    tIDENTIFIER   shift, and go to state 28
    tINT_TYPE     shift, and go to state 1
    tREAL_TYPE    shift, and go to state 2
    tSTRING_TYPE  shift, and go to state 3
    '['           shift, and go to state 8

    data_type  go to state 29
    func_type  go to state 17


State 16

    8 variable_decl: data_type . tIDENTIFIER
   10              | data_type . tIDENTIFIER '=' expression
   16 variable_decl_block: data_type . tIDENTIFIER '=' block_expression
   45 func_type: data_type . '<' data_types '>'
   46          | data_type . '<' '>'

    tIDENTIFIER  shift, and go to state 30
    '<'          shift, and go to state 31


State 17

   35 data_type: func_type .

    $default  reduce using rule 35 (data_type)


State 18

   11 variable_decl: tFOREIGN var_type . tIDENTIFIER '=' expression
   17 variable_decl_block: tFOREIGN var_type . tIDENTIFIER '=' block_expression

    tIDENTIFIER  shift, and go to state 32


State 19

   12 variable_decl: tPUBLIC var_type . tIDENTIFIER '=' expression
   18 variable_decl_block: tPUBLIC var_type . tIDENTIFIER '=' block_expression

    tIDENTIFIER  shift, and go to state 33


State 20

   34 data_type: '[' tVOID_TYPE . ']'

    ']'  shift, and go to state 34


State 21

   33 data_type: '[' data_type . ']'
   45 func_type: data_type . '<' data_types '>'
   46          | data_type . '<' '>'

    '<'  shift, and go to state 31
    ']'  shift, and go to state 35


State 22

    0 $accept: file $end .

    $default  accept


State 23

    4 program: tBEGIN . block tEND

    '{'  shift, and go to state 36

    block  go to state 37


State 24

    3 file: file program .

    $default  reduce using rule 3 (file)


State 25

   13 variable_decl: var_type tIDENTIFIER . '=' expression
   19 variable_decl_block: var_type tIDENTIFIER . '=' block_expression

    '='  shift, and go to state 38


State 26

   21 variable_decls: variable_decl ';' .
   22               | variable_decl ';' . variable_decls

    tINT_TYPE     shift, and go to state 1
    tREAL_TYPE    shift, and go to state 2
    tSTRING_TYPE  shift, and go to state 3
    tFOREIGN      shift, and go to state 4
    tUSE          shift, and go to state 5
    tPUBLIC       shift, and go to state 6
    tVAR          shift, and go to state 7
    '['           shift, and go to state 8

    '['       [reduce using rule 21 (variable_decls)]
    $default  reduce using rule 21 (variable_decls)

    var_type             go to state 10
    variable_decl        go to state 11
    variable_decl_block  go to state 12
    variable_decls       go to state 39
    qualifier            go to state 15
    data_type            go to state 16
    func_type            go to state 17


State 27

   24 variable_decls: variable_decl_block variable_decls .

    $default  reduce using rule 24 (variable_decls)


State 28

   14 variable_decl: qualifier tIDENTIFIER . '=' expression
   20 variable_decl_block: qualifier tIDENTIFIER . '=' block_expression

    '='  shift, and go to state 40


State 29

    7 variable_decl: qualifier data_type . tIDENTIFIER
    9              | qualifier data_type . tIDENTIFIER '=' expression
   15 variable_decl_block: qualifier data_type . tIDENTIFIER '=' block_expression
   45 func_type: data_type . '<' data_types '>'
   46          | data_type . '<' '>'

    tIDENTIFIER  shift, and go to state 41
    '<'          shift, and go to state 31


State 30

    8 variable_decl: data_type tIDENTIFIER .
   10              | data_type tIDENTIFIER . '=' expression
   16 variable_decl_block: data_type tIDENTIFIER . '=' block_expression

    '='  shift, and go to state 42

    $default  reduce using rule 8 (variable_decl)


State 31

   45 func_type: data_type '<' . data_types '>'
   46          | data_type '<' . '>'

    tINT_TYPE     shift, and go to state 1
    tREAL_TYPE    shift, and go to state 2
    tSTRING_TYPE  shift, and go to state 3
    '>'           shift, and go to state 43
    '['           shift, and go to state 8

    data_type   go to state 44
    data_types  go to state 45
    func_type   go to state 17


State 32

   11 variable_decl: tFOREIGN var_type tIDENTIFIER . '=' expression
   17 variable_decl_block: tFOREIGN var_type tIDENTIFIER . '=' block_expression

    '='  shift, and go to state 46


State 33

   12 variable_decl: tPUBLIC var_type tIDENTIFIER . '=' expression
   18 variable_decl_block: tPUBLIC var_type tIDENTIFIER . '=' block_expression

    '='  shift, and go to state 47


State 34

   34 data_type: '[' tVOID_TYPE ']' .

    $default  reduce using rule 34 (data_type)


State 35

   33 data_type: '[' data_type ']' .

    $default  reduce using rule 33 (data_type)


State 36

    5 block: '{' . opt_variable_decls opt_instructions '}'

    tINT_TYPE     shift, and go to state 1
    tREAL_TYPE    shift, and go to state 2
    tSTRING_TYPE  shift, and go to state 3
    tFOREIGN      shift, and go to state 4
    tUSE          shift, and go to state 5
    tPUBLIC       shift, and go to state 6
    tVAR          shift, and go to state 7
    '['           shift, and go to state 8

    '['       [reduce using rule 25 (opt_variable_decls)]
    $default  reduce using rule 25 (opt_variable_decls)

    var_type             go to state 10
    variable_decl        go to state 11
    variable_decl_block  go to state 12
    variable_decls       go to state 13
    opt_variable_decls   go to state 48
    qualifier            go to state 15
    data_type            go to state 16
    func_type            go to state 17


State 37

    4 program: tBEGIN block . tEND

    tEND  shift, and go to state 49


State 38

   13 variable_decl: var_type tIDENTIFIER '=' . expression
   19 variable_decl_block: var_type tIDENTIFIER '=' . block_expression

    tINTEGER     shift, and go to state 50
    tREAL        shift, and go to state 51
    tIDENTIFIER  shift, and go to state 52
    tSTRING      shift, and go to state 53
    tNOT         shift, and go to state 54
    tINPUT       shift, and go to state 55
    tNULL        shift, and go to state 56
    tSIZEOF      shift, and go to state 57
    '+'          shift, and go to state 58
    '-'          shift, and go to state 59
    '['          shift, and go to state 60
    '('          shift, and go to state 61

    func_def          go to state 62
    block_expression  go to state 63
    expression        go to state 64
    lvalue            go to state 65
    integer           go to state 66
    real              go to state 67
    string            go to state 68


State 39

   22 variable_decls: variable_decl ';' variable_decls .

    $default  reduce using rule 22 (variable_decls)


State 40

   14 variable_decl: qualifier tIDENTIFIER '=' . expression
   20 variable_decl_block: qualifier tIDENTIFIER '=' . block_expression

    tINTEGER     shift, and go to state 50
    tREAL        shift, and go to state 51
    tIDENTIFIER  shift, and go to state 52
    tSTRING      shift, and go to state 53
    tNOT         shift, and go to state 54
    tINPUT       shift, and go to state 55
    tNULL        shift, and go to state 56
    tSIZEOF      shift, and go to state 57
    '+'          shift, and go to state 58
    '-'          shift, and go to state 59
    '['          shift, and go to state 60
    '('          shift, and go to state 61

    func_def          go to state 62
    block_expression  go to state 69
    expression        go to state 70
    lvalue            go to state 65
    integer           go to state 66
    real              go to state 67
    string            go to state 68


State 41

    7 variable_decl: qualifier data_type tIDENTIFIER .
    9              | qualifier data_type tIDENTIFIER . '=' expression
   15 variable_decl_block: qualifier data_type tIDENTIFIER . '=' block_expression

    '='  shift, and go to state 71

    $default  reduce using rule 7 (variable_decl)


State 42

   10 variable_decl: data_type tIDENTIFIER '=' . expression
   16 variable_decl_block: data_type tIDENTIFIER '=' . block_expression

    tINTEGER     shift, and go to state 50
    tREAL        shift, and go to state 51
    tIDENTIFIER  shift, and go to state 52
    tSTRING      shift, and go to state 53
    tNOT         shift, and go to state 54
    tINPUT       shift, and go to state 55
    tNULL        shift, and go to state 56
    tSIZEOF      shift, and go to state 57
    '+'          shift, and go to state 58
    '-'          shift, and go to state 59
    '['          shift, and go to state 60
    '('          shift, and go to state 61

    func_def          go to state 62
    block_expression  go to state 72
    expression        go to state 73
    lvalue            go to state 65
    integer           go to state 66
    real              go to state 67
    string            go to state 68


State 43

   46 func_type: data_type '<' '>' .

    $default  reduce using rule 46 (func_type)


State 44

   36 data_types: data_type .
   45 func_type: data_type . '<' data_types '>'
   46          | data_type . '<' '>'

    '<'  shift, and go to state 31

    $default  reduce using rule 36 (data_types)


State 45

   37 data_types: data_types . ',' data_type
   45 func_type: data_type '<' data_types . '>'

    '>'  shift, and go to state 74
    ','  shift, and go to state 75


State 46

   11 variable_decl: tFOREIGN var_type tIDENTIFIER '=' . expression
   17 variable_decl_block: tFOREIGN var_type tIDENTIFIER '=' . block_expression

    tINTEGER     shift, and go to state 50
    tREAL        shift, and go to state 51
    tIDENTIFIER  shift, and go to state 52
    tSTRING      shift, and go to state 53
    tNOT         shift, and go to state 54
    tINPUT       shift, and go to state 55
    tNULL        shift, and go to state 56
    tSIZEOF      shift, and go to state 57
    '+'          shift, and go to state 58
    '-'          shift, and go to state 59
    '['          shift, and go to state 60
    '('          shift, and go to state 61

    func_def          go to state 62
    block_expression  go to state 76
    expression        go to state 77
    lvalue            go to state 65
    integer           go to state 66
    real              go to state 67
    string            go to state 68


State 47

   12 variable_decl: tPUBLIC var_type tIDENTIFIER '=' . expression
   18 variable_decl_block: tPUBLIC var_type tIDENTIFIER '=' . block_expression

    tINTEGER     shift, and go to state 50
    tREAL        shift, and go to state 51
    tIDENTIFIER  shift, and go to state 52
    tSTRING      shift, and go to state 53
    tNOT         shift, and go to state 54
    tINPUT       shift, and go to state 55
    tNULL        shift, and go to state 56
    tSIZEOF      shift, and go to state 57
    '+'          shift, and go to state 58
    '-'          shift, and go to state 59
    '['          shift, and go to state 60
    '('          shift, and go to state 61

    func_def          go to state 62
    block_expression  go to state 78
    expression        go to state 79
    lvalue            go to state 65
    integer           go to state 66
    real              go to state 67
    string            go to state 68


State 48

    5 block: '{' opt_variable_decls . opt_instructions '}'

    tINTEGER     shift, and go to state 50
    tREAL        shift, and go to state 51
    tIDENTIFIER  shift, and go to state 52
    tSTRING      shift, and go to state 53
    tNOT         shift, and go to state 54
    tIF          shift, and go to state 80
    tWHILE       shift, and go to state 81
    tSTOP        shift, and go to state 82
    tAGAIN       shift, and go to state 83
    tWRITE       shift, and go to state 84
    tWRITELN     shift, and go to state 85
    tRETURN      shift, and go to state 86
    tINPUT       shift, and go to state 55
    tNULL        shift, and go to state 56
    tSIZEOF      shift, and go to state 57
    '+'          shift, and go to state 58
    '-'          shift, and go to state 59
    '{'          shift, and go to state 36
    '['          shift, and go to state 60
    '('          shift, and go to state 61

    $default  reduce using rule 47 (opt_instructions)

    block              go to state 87
    func_def           go to state 62
    opt_instructions   go to state 88
    instructions       go to state 89
    instruction        go to state 90
    block_instruction  go to state 91
    block_expression   go to state 92
    expression         go to state 93
    lvalue             go to state 65
    integer            go to state 66
    real               go to state 67
    string             go to state 68


State 49

    4 program: tBEGIN block tEND .

    $default  reduce using rule 4 (program)


State 50

  105 integer: tINTEGER .

    $default  reduce using rule 105 (integer)


State 51

  106 real: tREAL .

    $default  reduce using rule 106 (real)


State 52

   97 lvalue: tIDENTIFIER .

    $default  reduce using rule 97 (lvalue)


State 53

  107 string: tSTRING .

    $default  reduce using rule 107 (string)


State 54

   90 expression: tNOT . expression

    tINTEGER     shift, and go to state 50
    tREAL        shift, and go to state 51
    tIDENTIFIER  shift, and go to state 52
    tSTRING      shift, and go to state 53
    tNOT         shift, and go to state 54
    tINPUT       shift, and go to state 55
    tNULL        shift, and go to state 56
    tSIZEOF      shift, and go to state 57
    '+'          shift, and go to state 58
    '-'          shift, and go to state 59
    '['          shift, and go to state 60
    '('          shift, and go to state 94

    expression  go to state 95
    lvalue      go to state 65
    integer     go to state 66
    real        go to state 67
    string      go to state 68


State 55

   91 expression: tINPUT .

    $default  reduce using rule 91 (expression)


State 56

   72 expression: tNULL .

    $default  reduce using rule 72 (expression)


State 57

   93 expression: tSIZEOF . '(' expression ')'

    '('  shift, and go to state 96


State 58

   89 expression: '+' . expression

    tINTEGER     shift, and go to state 50
    tREAL        shift, and go to state 51
    tIDENTIFIER  shift, and go to state 52
    tSTRING      shift, and go to state 53
    tNOT         shift, and go to state 54
    tINPUT       shift, and go to state 55
    tNULL        shift, and go to state 56
    tSIZEOF      shift, and go to state 57
    '+'          shift, and go to state 58
    '-'          shift, and go to state 59
    '['          shift, and go to state 60
    '('          shift, and go to state 94

    expression  go to state 97
    lvalue      go to state 65
    integer     go to state 66
    real        go to state 67
    string      go to state 68


State 59

   88 expression: '-' . expression

    tINTEGER     shift, and go to state 50
    tREAL        shift, and go to state 51
    tIDENTIFIER  shift, and go to state 52
    tSTRING      shift, and go to state 53
    tNOT         shift, and go to state 54
    tINPUT       shift, and go to state 55
    tNULL        shift, and go to state 56
    tSIZEOF      shift, and go to state 57
    '+'          shift, and go to state 58
    '-'          shift, and go to state 59
    '['          shift, and go to state 60
    '('          shift, and go to state 94

    expression  go to state 98
    lvalue      go to state 65
    integer     go to state 66
    real        go to state 67
    string      go to state 68


State 60

   95 expression: '[' . expression ']'

    tINTEGER     shift, and go to state 50
    tREAL        shift, and go to state 51
    tIDENTIFIER  shift, and go to state 52
    tSTRING      shift, and go to state 53
    tNOT         shift, and go to state 54
    tINPUT       shift, and go to state 55
    tNULL        shift, and go to state 56
    tSIZEOF      shift, and go to state 57
    '+'          shift, and go to state 58
    '-'          shift, and go to state 59
    '['          shift, and go to state 60
    '('          shift, and go to state 94

    expression  go to state 99
    lvalue      go to state 65
    integer     go to state 66
    real        go to state 67
    string      go to state 68


State 61

   41 func_def: '(' . ')' '-' '>' data_type ':' block
   42         | '(' . args ')' '-' '>' data_type ':' block
   43         | '(' . ')' '-' '>' tVOID_TYPE ':' block
   44         | '(' . args ')' '-' '>' tVOID_TYPE ':' block
   94 expression: '(' . expression ')'
   99 lvalue: '(' . expression ')' '[' expression ']'

    tINTEGER      shift, and go to state 50
    tREAL         shift, and go to state 51
    tIDENTIFIER   shift, and go to state 52
    tSTRING       shift, and go to state 53
    tINT_TYPE     shift, and go to state 1
    tREAL_TYPE    shift, and go to state 2
    tSTRING_TYPE  shift, and go to state 3
    tNOT          shift, and go to state 54
    tINPUT        shift, and go to state 55
    tNULL         shift, and go to state 56
    tSIZEOF       shift, and go to state 57
    '+'           shift, and go to state 58
    '-'           shift, and go to state 59
    '['           shift, and go to state 100
    '('           shift, and go to state 94
    ')'           shift, and go to state 101

    data_type   go to state 102
    arg         go to state 103
    args        go to state 104
    func_type   go to state 17
    expression  go to state 105
    lvalue      go to state 65
    integer     go to state 66
    real        go to state 67
    string      go to state 68


State 62

   68 block_expression: func_def .

    $default  reduce using rule 68 (block_expression)


State 63

   19 variable_decl_block: var_type tIDENTIFIER '=' block_expression .

    $default  reduce using rule 19 (variable_decl_block)


State 64

   13 variable_decl: var_type tIDENTIFIER '=' expression .
   75 expression: expression . '+' expression
   76           | expression . '-' expression
   77           | expression . '*' expression
   78           | expression . '/' expression
   79           | expression . '%' expression
   80           | expression . '<' expression
   81           | expression . tLE expression
   82           | expression . tEQ expression
   83           | expression . tGE expression
   84           | expression . '>' expression
   85           | expression . tNE expression
   86           | expression . tAND expression
   87           | expression . tOR expression
   92           | expression . '(' opt_expressions ')'
  100 lvalue: expression . '(' opt_expressions ')' '[' expression ']'

    tAND  shift, and go to state 106
    tOR   shift, and go to state 107
    tGE   shift, and go to state 108
    tLE   shift, and go to state 109
    tEQ   shift, and go to state 110
    tNE   shift, and go to state 111
    '>'   shift, and go to state 112
    '<'   shift, and go to state 113
    '+'   shift, and go to state 114
    '-'   shift, and go to state 115
    '*'   shift, and go to state 116
    '/'   shift, and go to state 117
    '%'   shift, and go to state 118
    '('   shift, and go to state 119

    $default  reduce using rule 13 (variable_decl)


State 65

   73 expression: lvalue .
   74           | lvalue . '=' expression
   96           | lvalue . '?'
   98 lvalue: lvalue . '[' expression ']'

    '='  shift, and go to state 120
    '['  shift, and go to state 121
    '?'  shift, and go to state 122

    $default  reduce using rule 73 (expression)


State 66

   69 expression: integer .

    $default  reduce using rule 69 (expression)


State 67

   70 expression: real .

    $default  reduce using rule 70 (expression)


State 68

   71 expression: string .
  108 string: string . tSTRING

    tSTRING  shift, and go to state 123

    $default  reduce using rule 71 (expression)


State 69

   20 variable_decl_block: qualifier tIDENTIFIER '=' block_expression .

    $default  reduce using rule 20 (variable_decl_block)


State 70

   14 variable_decl: qualifier tIDENTIFIER '=' expression .
   75 expression: expression . '+' expression
   76           | expression . '-' expression
   77           | expression . '*' expression
   78           | expression . '/' expression
   79           | expression . '%' expression
   80           | expression . '<' expression
   81           | expression . tLE expression
   82           | expression . tEQ expression
   83           | expression . tGE expression
   84           | expression . '>' expression
   85           | expression . tNE expression
   86           | expression . tAND expression
   87           | expression . tOR expression
   92           | expression . '(' opt_expressions ')'
  100 lvalue: expression . '(' opt_expressions ')' '[' expression ']'

    tAND  shift, and go to state 106
    tOR   shift, and go to state 107
    tGE   shift, and go to state 108
    tLE   shift, and go to state 109
    tEQ   shift, and go to state 110
    tNE   shift, and go to state 111
    '>'   shift, and go to state 112
    '<'   shift, and go to state 113
    '+'   shift, and go to state 114
    '-'   shift, and go to state 115
    '*'   shift, and go to state 116
    '/'   shift, and go to state 117
    '%'   shift, and go to state 118
    '('   shift, and go to state 119

    $default  reduce using rule 14 (variable_decl)


State 71

    9 variable_decl: qualifier data_type tIDENTIFIER '=' . expression
   15 variable_decl_block: qualifier data_type tIDENTIFIER '=' . block_expression

    tINTEGER     shift, and go to state 50
    tREAL        shift, and go to state 51
    tIDENTIFIER  shift, and go to state 52
    tSTRING      shift, and go to state 53
    tNOT         shift, and go to state 54
    tINPUT       shift, and go to state 55
    tNULL        shift, and go to state 56
    tSIZEOF      shift, and go to state 57
    '+'          shift, and go to state 58
    '-'          shift, and go to state 59
    '['          shift, and go to state 60
    '('          shift, and go to state 61

    func_def          go to state 62
    block_expression  go to state 124
    expression        go to state 125
    lvalue            go to state 65
    integer           go to state 66
    real              go to state 67
    string            go to state 68


State 72

   16 variable_decl_block: data_type tIDENTIFIER '=' block_expression .

    $default  reduce using rule 16 (variable_decl_block)


State 73

   10 variable_decl: data_type tIDENTIFIER '=' expression .
   75 expression: expression . '+' expression
   76           | expression . '-' expression
   77           | expression . '*' expression
   78           | expression . '/' expression
   79           | expression . '%' expression
   80           | expression . '<' expression
   81           | expression . tLE expression
   82           | expression . tEQ expression
   83           | expression . tGE expression
   84           | expression . '>' expression
   85           | expression . tNE expression
   86           | expression . tAND expression
   87           | expression . tOR expression
   92           | expression . '(' opt_expressions ')'
  100 lvalue: expression . '(' opt_expressions ')' '[' expression ']'

    tAND  shift, and go to state 106
    tOR   shift, and go to state 107
    tGE   shift, and go to state 108
    tLE   shift, and go to state 109
    tEQ   shift, and go to state 110
    tNE   shift, and go to state 111
    '>'   shift, and go to state 112
    '<'   shift, and go to state 113
    '+'   shift, and go to state 114
    '-'   shift, and go to state 115
    '*'   shift, and go to state 116
    '/'   shift, and go to state 117
    '%'   shift, and go to state 118
    '('   shift, and go to state 119
